Update new section Servicios

--- a/css/nosotros_css.css
+++ b/css/nosotros_css.css
@@ -176,6 +176,11 @@ header {
     object-fit: contain;
     filter: drop-shadow(8px 8px 3px rgb(70, 69, 69));
 }
+.obj-text {
+    text-transform: uppercase;
+    font-size: clamp(10px, 3vw, 15px);
+    margin-top: 1.2rem;
+}
 
 /*-------------- FOOTER -----------------*/
 footer {
@@ -650,6 +655,11 @@ footer {
         grid-template-columns: repeat(1, auto);
         gap: 2rem;
     }
+    .medallas img {
+        width: 250px;
+        height: 300px;
+        object-fit: contain;
+    }
 
     /*-------------- FOOTER --------------*/ 
     .footer {
@@ -807,7 +817,8 @@ footer {
         gap: 1rem;
     }
     .medallas img {
-        width: 250px;
+        width: 200px;
+        height: 300px;
     }
 
     /*-------------- FOOTER --------------*/ 
