--- a/css/nosotros_css.css
+++ b/css/nosotros_css.css
@@ -104,6 +104,9 @@ header {
 .gap2rem {
     gap: 2rem;
 }
+.gap2rem-2{
+    gap: 4rem;
+}
 .bold {
     font-weight: bold;
     color: #401e08;
@@ -127,18 +130,18 @@ header {
 }
 .hover-text {
     position: absolute;
-    z-index: -1;
-    top: -100%;
+    left: 0;
+    width: 5%;
     height: 100%;
     background-color: #fae98e;
     border-radius: 10px;
     transition: all .2s ease-in-out;
 }
 .hover-text p {
-    /* display: none; */
     text-align: center;
     font-size: 16px;
     padding: 15px;
+    display: none;
 }
 .item-valores > img {
     width: 6.5rem;
@@ -149,9 +152,12 @@ header {
 .item-valores:hover {
     .hover-text {
         z-index: 0;
-        top: 0%;
         width: 100%;
         border-radius: 10px;
+    }
+    .hover-text p {
+        display: inline;
+        color: black
     }
 }
 
@@ -160,7 +166,7 @@ header {
     width: 30rem;
 }
 .medals-title {
-    font-size: clamp(20px, 3vw, 28px);
+    font-size: clamp(18px, 3vw, 28px);
     text-transform: uppercase;
 }
 .medals-text {
@@ -190,13 +196,14 @@ footer {
     flex-direction: column;
 }
 .flex-2 h2 {
-    font-size: clamp(20px, 3vw, 22px);
+    font-size: clamp(18px, 3vw, 20px);
+    text-transform: uppercase;
     color: #401e08;
     margin-top: 1rem;
     margin-bottom: 2.3rem;
 }
 .flex-2 > a {
-    text-transform: uppercase;
+    font-size: clamp(14px, 3vw, 16px);
     color: #401e08;
 }
 .footer {
@@ -224,7 +231,7 @@ footer {
 }
 .footer-column-2 {
     grid-template-columns: 470px 350px;
-    gap: 3.6rem;
+    gap: 4rem;
 }
 .button-footer button {
     font-size: clamp(10px, 3vw, 20px);
@@ -251,7 +258,7 @@ footer {
 }
 .footer-column-2-2 {
     grid-template-columns: repeat(2, auto);
-    gap: 8rem;
+    gap: 3.4rem;
 }
 .footer-column-3 {
     grid-template-columns: repeat(3, auto);
@@ -297,10 +304,7 @@ footer {
     gap: 5rem;
 }
 .gap-footer-3 {
-    gap: 1.7rem;
-}
-.gap-footer-3 a {
-    font-size: clamp(15px, 3vw, 17x);
+    gap: 1.5rem;
 }
 .social {
     color: #4E2A14;
