--- a/css/servicios_css.css
+++ b/css/servicios_css.css
@@ -116,7 +116,7 @@ header {
     border-radius: 15px;
     height: 150px;
     transition: all .3s ease-in-out;
-    border: 1px solid #696969;
+    border: 1px solid #c4c4c4;
 }
 .ser1-img {
     background: url(../img/servicios-img/servicio-1.jpg) no-repeat;
@@ -142,11 +142,6 @@ header {
     background: url(../img/servicios-img/servicio-6.jpg) no-repeat;
     background-size: cover;
 }     
-.fa-solid {
-    font-size: 60px;
-    color: #401e08;
-    transition: all .3s ease-in-out;
-}
 .ser-title {
     color: #401e08; 
     font-size: clamp(10px, 3vw, 15px);
@@ -178,13 +173,14 @@ footer {
     flex-direction: column;
 }
 .flex-2 h2 {
-    font-size: clamp(20px, 3vw, 22px);
+    font-size: clamp(18px, 3vw, 20px);
+    text-transform: uppercase;
     color: #401e08;
     margin-top: 1rem;
     margin-bottom: 2.3rem;
 }
 .flex-2 > a {
-    text-transform: uppercase;
+    font-size: clamp(14px, 3vw, 16px);
     color: #401e08;
 }
 .footer {
@@ -212,7 +208,7 @@ footer {
 }
 .footer-column-2 {
     grid-template-columns: 470px 350px;
-    gap: 3.6rem;
+    gap: 4rem;
 }
 .button-footer button {
     font-size: clamp(10px, 3vw, 20px);
@@ -239,7 +235,7 @@ footer {
 }
 .footer-column-2-2 {
     grid-template-columns: repeat(2, auto);
-    gap: 8rem;
+    gap: 3.4rem;
 }
 .footer-column-3 {
     grid-template-columns: repeat(3, auto);
@@ -285,10 +281,7 @@ footer {
     gap: 5rem;
 }
 .gap-footer-3 {
-    gap: 1.7rem;
-}
-.gap-footer-3 a {
-    font-size: clamp(15px, 3vw, 17x);
+    gap: 1.5rem;
 }
 .social {
     color: #4E2A14;
@@ -310,4 +303,427 @@ footer {
 .social-w:hover {
     background-color: #25d366;
     color: #fdfbed;
+}
+
+@media (850px < width < 1012px) {
+    /*-------------- SERVICIOS --------------*/
+    .ser-column-2 {
+        grid-template-columns: repeat(1, auto);
+        gap: 5rem;
+    }
+    /*-------------- FOOTER --------------*/ 
+    .footer-column-2 {
+        grid-template-columns: repeat(1, auto);
+    }
+    .img-footer {
+        display: none;
+    }
+    .my-footer {
+        background-color: #4E2A14;
+        padding: 0;
+        height: 100%;
+    }
+    .footer-flex {
+        background-color: #4E2A14;
+        border-radius: 15px;
+        padding: 3rem;
+    }
+    .center-text-footer {
+        text-align: center;
+    }
+    .center-footer {
+        display: grid;
+        place-content: center;
+    }
+
+    .footer-column-2-2 {
+        grid-column:inherit;
+        grid-template-columns: repeat(1, auto);
+        gap: 4rem;
+    }
+    .footer-column-3 {
+        grid-template-columns: repeat(3, auto);
+        gap: 3rem;
+    }
+    .my-footer2 {
+        flex-direction: column-reverse;
+        padding-top: 4rem;
+        padding-inline: 3.6rem;
+    }
+}
+
+@media (max-width: 849px) {
+    /*-------------- SERVICIOS --------------*/
+    .servicios {
+        padding: 3rem;
+    }
+    .ser-column-2 {
+        grid-template-columns: repeat(1, auto);
+        gap: 5rem;
+    }
+    /*-------------- HEADER --------------*/ 
+    header {
+        top: 0px;
+        position: sticky;
+        z-index: 1000;
+    }
+    .burger-icon {
+        display: inline-block;
+        position: absolute;
+        top: 29px;
+        right: 30px;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+    .navegation > ul {
+        position: fixed;
+        background-color: black;
+        top: 0;
+        padding: 1rem;
+        width: 50%;
+        max-width: 300px;
+        height: 100vh;
+        left: -100%;
+        transition: all .5s ease-in-out;
+    }
+    #burgercheck:checked ~ ul  {
+        left: 0;
+    }
+    .navegation ul .burger-center{
+        padding-left: 1rem;
+    }
+    .navegation ul li > a {
+        color: white;
+    } 
+    .flex-row-2 {
+        flex-direction: column;
+    }
+    .center-nav {
+        display: flex;
+        place-content: center;
+    }
+    .logo-burger {
+        display: inline-block;
+    }
+    .logo-burger-img img {
+        width: 7rem;
+    }
+    .logo-burger-text {
+        font-size: clamp(10px, 3vw, 19px);
+    }
+    .gap5rem {
+        gap: 3rem;
+    }
+    .burger-center {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+
+    /*-------------- FOOTER --------------*/ 
+    .footer-column-2 {
+        grid-template-columns: repeat(1, auto);
+    }
+    .img-footer {
+        display: none;
+    }
+    .my-footer {
+        background-color: #fae98e;
+        border-radius: 0;
+        padding: 0;
+        height: 100%;
+    }
+    .footer-flex {
+        background-color: #4E2A14;
+        border-radius: 15px;
+        padding: 3rem;
+    }
+    .center-text-footer {
+        text-align: center;
+    }
+    .center-footer {
+        display: grid;
+        place-content: center;
+    }
+
+    .footer-column-2-2 {
+        grid-column: inherit;
+        grid-template-columns: repeat(1, auto);
+        gap: 4rem;
+    }
+    .footer-column-3 {
+        grid-template-columns: repeat(2, auto);
+        gap: 3rem;
+    }
+    .my-footer2 {
+        flex-direction: column-reverse;
+        padding-top: 4rem;
+        padding-inline: 3.6rem;
+    }
+}
+
+@media (max-width: 649px) {
+    /*-------------- SERVICIOS --------------*/
+    .servicios {
+        padding: 3rem;
+    }
+    .ser-column-2 {
+        grid-template-columns: repeat(1, auto);
+        gap: 4rem;
+    }
+    .item {
+        background-color: #f7d54d;
+        border-radius: 15px;
+        padding: 30px;
+        width: 250px;
+        height: 334px;
+        position: relative;
+        top: 0rem;
+        transition: all .3s ease-in-out;
+        cursor: pointer;
+        box-shadow: 5px 5px 10px rgb(196, 196, 196);
+    }
+
+    /*-------------- HEADER --------------*/ 
+    header {
+        top: 0px;
+        position: sticky;
+        z-index: 1000;
+        padding-inline: 1rem;
+    }
+    .burger-icon {
+        display: inline-block;
+        position: absolute;
+        top: 29px;
+        right: 30px;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+    .navegation > ul {
+        position: fixed;
+        background-color: black;
+        top: 0;
+        padding: 1rem;
+        width: 50%;
+        max-width: 300px;
+        height: 100vh;
+        left: -100%;
+        transition: all .5s ease-in-out;
+    }
+    #burgercheck:checked ~ ul  {
+        left: 0;
+    }
+    .navegation ul .burger-center{
+        padding-left: 1rem;
+    }
+    .navegation ul li > a {
+        color: white;
+    } 
+    .flex-row-2 {
+        flex-direction: column;
+    }
+    .center-nav {
+        display: flex;
+        place-content: center;
+    }
+    .logo-burger {
+        display: inline-block;
+    }
+    .logo-burger-img img {
+        width: 7rem;
+    }
+    .logo-burger-text {
+        font-size: clamp(10px, 3vw, 19px);
+    }
+    .gap5rem {
+        gap: 3rem;
+    }
+    .burger-center {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+
+    /*-------------- FOOTER --------------*/ 
+    .footer {
+        padding: 3rem;
+    }
+    .footer-column-2 {
+        grid-template-columns: repeat(1, auto);
+    }
+    .img-footer {
+        display: none;
+    }
+    .my-footer {
+        background-color: #fae98e;
+        border-radius: 0;
+        padding: 0;
+        height: 100%;
+    }
+    .footer-flex {
+        background-color: #4E2A14;
+        border-radius: 15px;
+        padding: 3rem;
+    }
+    .center-text-footer {
+        text-align: center;
+    }
+    .center-footer {
+        display: grid;
+        place-content: center;
+    }
+
+    .footer-column-2-2 {
+        grid-column:inherit;
+        grid-template-columns: repeat(1, auto);
+        gap: 4rem;
+    }
+    .footer-column-3 {
+        grid-template-columns: repeat(2, auto);
+        gap: 2rem;
+    }
+    .my-footer2 {
+        flex-direction: column-reverse;
+        padding-top: 4rem;
+        padding-inline: 3.6rem;
+    }
+}
+
+@media (max-width: 450px) {
+    /*-------------- HEADER --------------*/ 
+    header {
+        top: 0px;
+        position: sticky;
+        z-index: 1000;
+        padding-inline: 1rem;
+    }
+    .burger-icon {
+        display: inline-block;
+        position: absolute;
+        top: 29px;
+        right: 30px;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+    .navegation > ul {
+        position: fixed;
+        background-color: black;
+        top: 0;
+        padding: 1rem;
+        width: 50%;
+        max-width: 300px;
+        height: 100vh;
+        left: -100%;
+        transition: all .5s ease-in-out;
+    }
+    #burgercheck:checked ~ ul  {
+        left: 0;
+    }
+    .navegation ul li > a {
+        color: white;
+    } 
+    .navegation ul .burger-center{
+        padding-left: 1rem;
+    }
+    .flex-row-2 {
+        flex-direction: column;
+    }
+    .center-nav {
+        display: flex;
+        place-content: center;
+    }
+    .logo-burger {
+        display: inline-block;
+    }
+    .logo-burger-img img {
+        width: 7rem;
+    }
+    .logo-burger-text {
+        font-size: clamp(10px, 3vw, 19px);
+    }
+    .gap5rem {
+        gap: 3rem;
+    }
+    .burger-center {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+
+    /*-------------- SERVICIOS --------------*/
+    .servicios {
+        padding: 3rem;
+    }
+    .ser-column-2 {
+        grid-template-columns: repeat(1, auto);
+        gap: 3.5rem;
+    }
+    .item {
+        background-color: #f7d54d;
+        border-radius: 15px;
+        padding: 30px;
+        width: 225px;
+        height: 334px;
+        position: relative;
+        top: 0rem;
+        transition: all .3s ease-in-out;
+        cursor: pointer;
+        box-shadow: 5px 5px 10px rgb(196, 196, 196);
+    }
+    .ser-logo {
+        background-color: #fae98e;
+        padding: .8rem;
+        border-radius: 15px;
+        height: 150px;
+        transition: all .3s ease-in-out;
+        border: 1px solid #c4c4c4;
+    }
+
+    /*-------------- FOOTER --------------*/ 
+    .footer {
+        padding: 3rem;
+    }
+    .footer-column-2 {
+        grid-template-columns: repeat(1, auto);
+    }
+    .img-footer {
+        display: none;
+    }
+    .my-footer {
+        background-color: #fae98e;
+        border-radius: 0;
+        padding: 0;
+        height: 100%;
+    }
+    .footer-flex {
+        background-color: #4E2A14;
+        border-radius: 15px;
+        padding: 3rem;
+        width: 200px;
+    }
+    .title-footer {
+        text-align: center;
+    }
+    .center-text-footer {
+        text-align: center;
+    }
+    .center-footer {
+        display: grid;
+        place-content: center;
+    }
+
+    .footer-column-2-2 {
+        grid-column:inherit;
+        grid-template-columns: repeat(1, auto);
+        gap: 4rem;
+    }
+    .footer-column-3 {
+        grid-template-columns: repeat(2, auto);
+        gap: 2rem;
+    }
+    .my-footer2 {
+        flex-direction: column-reverse;
+        padding-top: 4rem;
+        padding-inline: 3.6rem;
+    }
 }
