update section productos

--- a/css/nosotros_css.css
+++ b/css/nosotros_css.css
@@ -84,6 +84,12 @@ header {
     gap: 7rem;
     background-color: white;
 }
+.title-nosotros {
+    padding-top: 5rem;
+    text-transform: uppercase;
+    color: #401e08;
+    font-size: clamp(20px, 3vw, 29px);
+}
 .about {
     padding-inline: .6rem;
 }
@@ -466,6 +472,9 @@ footer {
     }
 
     /*-------------- NOSOTROS ----------------*/
+    .title-nosotros {
+        padding-top: 3rem;
+    }
     .flex-column-2 {
         flex-direction: column;
     }
@@ -611,6 +620,9 @@ footer {
     }
 
     /*-------------- NOSOTROS ----------------*/
+    .title-nosotros {
+        padding-top: 3rem;
+    }
     .nosotros {
         padding: 3rem;
         gap: 3.5rem;
@@ -772,6 +784,9 @@ footer {
     }
 
     /*-------------- NOSOTROS ----------------*/
+    .title-nosotros {
+        padding-top: 3rem;
+    }
     .nosotros {
         padding: 3rem;
         gap: 3.5rem;
