--- a/css/productos_css.css
+++ b/css/productos_css.css
@@ -61,6 +61,9 @@ header {
     color: white;
     transition: all .3s ease-in-out;
 }
+.navegation ul > li a:hover {
+    color: white;
+}
 .gap5rem {
     gap: 5rem
 }
@@ -78,98 +81,56 @@ header {
     color: #401e08;
 }
 
-/*-------------- SERVICIOS ----------------*/
-.servicios {
+/*-------------- PRODUCTOS ---------------*/
+.productos {
     padding: 5rem;
 }
-.title-servicios {
-    padding-bottom: 5rem;
+.productos-column-3 {
+    grid-template-columns: repeat(3, auto);
+    gap: 12rem;
+}
+.item-img {
+    width: 8.5rem;
+    height: 20rem;
+    filter: grayscale(100%);
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+}
+.item-img:hover {
+    scale: 120%;
+    filter: grayscale(0%);
+    rotate: -10deg;
+}
+.title-productos {
     text-transform: uppercase;
+    margin-bottom: 5rem;
     color: #401e08;
     font-size: clamp(20px, 3vw, 29px);
 }
-.ser-column-2 {
-    grid-template-columns: repeat(2, auto);
-    gap: 5rem;
-}
-.item {
-    background-color: #f7d54d;
-    border-radius: 15px;
-    padding: 30px;
-    width: 300px;
-    height: 334px;
-    position: relative;
-    top: 0rem;
+.producto-info {
+    gap: 1.8rem;
+    margin-top: 3.6rem;
     transition: all .3s ease-in-out;
-    cursor: pointer;
-    box-shadow: 5px 5px 10px rgb(196, 196, 196);
 }
-.item:hover {
-    top: -1rem;
-    .ser-logo {
-        scale: 1.04;
-    }
-}
-.item-s {
-    position: absolute;
-    top: -3rem;
-    padding: 30px;
-    height: 380px;
-}
-.ser-logo {
-    background-color: #fae98e;
-    padding: .8rem;
-    border-radius: 15px;
-    height: 150px;
-    transition: all .3s ease-in-out;
-    border: 1px solid #c4c4c4;
-}
-.ser1-img {
-    background: url(../img/servicios-img/servicio-1.jpg) no-repeat;
-    background-size: cover;
-} 
-.ser2-img {
-    background: url(../img/servicios-img/servicio-2.jpg) no-repeat;
-    background-size: cover;
-}
-.ser3-img {
-    background: url(../img/servicios-img/servicio-3.jpg) no-repeat;
-    background-size: cover;
-}
-.ser4-img {
-    background: url(../img/servicios-img/servicio-4.jpg) no-repeat;
-    background-size: cover;
-}
-.ser5-img {
-    background: url(../img/servicios-img/servicio-5.jpg) no-repeat;
-    background-size: cover;
-} 
-.ser6-img {
-    background: url(../img/servicios-img/servicio-6.jpg) no-repeat;
-    background-size: cover;
-}     
-.ser-title {
-    color: #401e08; 
-    font-size: clamp(10px, 3vw, 15px);
-}
-.ser-text {
-    color: #401e08;
-}
-.ser-enlace {
-    background-color: #f2be1d;
-    padding: 1rem;
-    border-radius: 8px;
+.producto-info div > p {
     text-transform: uppercase;
-    color: #401e08;
+    font-size: clamp(19px, 3vw, 35px);
+    font-weight: bold;
+}
+.producto-info div > button {
+    color: white;
+    cursor: pointer;
+    text-transform: uppercase;
+    background-color: black;
+    padding-block: 1rem;
+    padding-inline: 2rem;
+    border-radius: 2rem;
+    font-size: clamp(8px, 3vw, 14px);
     transition: all .3s ease-in-out;
 }
-.ser-enlace:hover {
-    background-color: #9c5b0c;
+.producto-info div > button:hover {
+    opacity: .5;
 }
-.gap-ser {
-    gap: 1.2rem;
-}
-
 
 /*-------------- FOOTER -----------------*/
 footer {
@@ -312,11 +273,20 @@ footer {
 }
 
 @media (850px < width < 1012px) {
-    /*-------------- SERVICIOS --------------*/
-    .ser-column-2 {
-        grid-template-columns: repeat(1, auto);
-        gap: 5rem;
+    /*-------------- PRODUCTO --------------*/ 
+    .productos {
+        padding: 5rem;
     }
+    .productos-column-3 {
+        grid-template-columns: repeat(2, auto);
+        gap: 8rem;
+    }
+    .item-img:hover {
+        scale: 100%;
+        filter: grayscale(0%);
+        rotate: -10deg;
+    }
+
     /*-------------- FOOTER --------------*/ 
     .footer-column-2 {
         grid-template-columns: repeat(1, auto);
@@ -418,13 +388,31 @@ footer {
         align-items: center;
     }
 
-    /*-------------- SERVICIOS --------------*/
-    .servicios {
+    /*-------------- PRODUCTO --------------*/ 
+    .productos {
         padding: 3rem;
     }
-    .ser-column-2 {
-        grid-template-columns: repeat(1, auto);
-        gap: 5rem;
+    .productos-column-3 {
+        grid-template-columns: repeat(2, auto);
+        gap: 8rem;
+    }
+    .item-img {
+        width: 8.5rem;
+        height: 20rem;
+        filter: grayscale(100%);
+        transition: all .3s ease-in-out;
+        cursor: pointer;
+    }
+    .item-img:hover {
+        scale: 100%;
+        filter: grayscale(0%);
+        rotate: -10deg;
+    }
+    .title-productos {
+        text-transform: uppercase;
+        margin-bottom: 5rem;
+        color: #401e08;
+        font-size: clamp(20px, 3vw, 29px);
     }
 
     /*-------------- FOOTER --------------*/ 
@@ -470,6 +458,9 @@ footer {
 }
 
 @media (max-width: 649px) {
+    .productos {
+        padding: 3rem;
+    }
     /*-------------- HEADER --------------*/ 
     header {
         top: 0px;
@@ -530,25 +521,31 @@ footer {
         align-items: center;
     }
 
-    /*-------------- SERVICIOS --------------*/
-    .servicios {
+    /*-------------- PRODUCTO --------------*/ 
+    .productos {
         padding: 3rem;
     }
-    .ser-column-2 {
-        grid-template-columns: repeat(1, auto);
-        gap: 4rem;
+    .productos-column-3 {
+        grid-template-columns: repeat(1 , auto);
+        gap: 6rem;
     }
-    .item {
-        background-color: #f7d54d;
-        border-radius: 15px;
-        padding: 30px;
-        width: 250px;
-        height: 334px;
-        position: relative;
-        top: 0rem;
+    .item-img {
+        width: 8.5rem;
+        height: 20rem;
+        filter: grayscale(100%);
         transition: all .3s ease-in-out;
         cursor: pointer;
-        box-shadow: 5px 5px 10px rgb(196, 196, 196);
+    }
+    .item-img:hover {
+        scale: 110%;
+        filter: grayscale(0%);
+        rotate: -10deg;
+    }
+    .title-productos {
+        text-transform: uppercase;
+        margin-bottom: 3.6rem;
+        color: #401e08;
+        font-size: clamp(20px, 3vw, 29px);
     }
 
     /*-------------- FOOTER --------------*/ 
@@ -657,33 +654,9 @@ footer {
         align-items: center;
     }
 
-    /*-------------- SERVICIOS --------------*/
-    .servicios {
+    /*-------------- PRODUCTOS ------------*/
+    .productos {
         padding: 3rem;
-    }
-    .ser-column-2 {
-        grid-template-columns: repeat(1, auto);
-        gap: 3.5rem;
-    }
-    .item {
-        background-color: #f7d54d;
-        border-radius: 15px;
-        padding: 30px;
-        width: 225px;
-        height: 334px;
-        position: relative;
-        top: 0rem;
-        transition: all .3s ease-in-out;
-        cursor: pointer;
-        box-shadow: 5px 5px 10px rgb(196, 196, 196);
-    }
-    .ser-logo {
-        background-color: #fae98e;
-        padding: .8rem;
-        border-radius: 15px;
-        height: 150px;
-        transition: all .3s ease-in-out;
-        border: 1px solid #c4c4c4;
     }
 
     /*-------------- FOOTER --------------*/ 
