--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -481,7 +481,7 @@ footer {
         display: inline-block;
     }
     .logo-burger-img img {
-        width: 7rem;
+        width: 15rem;
     }
     .logo-burger-text {
         font-size: clamp(10px, 3vw, 19px);
@@ -602,7 +602,7 @@ footer {
         display: inline-block;
     }
     .logo-burger-img img {
-        width: 7rem;
+        width: 15rem;
     }
     .logo-burger-text {
         font-size: clamp(10px, 3vw, 19px);
@@ -687,10 +687,13 @@ footer {
         z-index: 1000;
         padding-inline: 1rem;
     }
+    .title-logo img {
+        width: 10rem;
+    }
     .burger-icon {
         display: inline-block;
         position: absolute;
-        top: 29px;
+        top: 20px;
         right: 30px;
         font-size: 1.5rem;
         cursor: pointer;
@@ -726,7 +729,7 @@ footer {
         display: inline-block;
     }
     .logo-burger-img img {
-        width: 7rem;
+        width: 10rem;
     }
     .logo-burger-text {
         font-size: clamp(10px, 3vw, 19px);
