--- a/css/productos_css.css
+++ b/css/productos_css.css
@@ -374,7 +374,7 @@ footer {
         display: inline-block;
     }
     .logo-burger-img img {
-        width: 7rem;
+        width: 15rem;
     }
     .logo-burger-text {
         font-size: clamp(10px, 3vw, 19px);
@@ -507,7 +507,7 @@ footer {
         display: inline-block;
     }
     .logo-burger-img img {
-        width: 7rem;
+        width: 15rem;
     }
     .logo-burger-text {
         font-size: clamp(10px, 3vw, 19px);
@@ -601,10 +601,13 @@ footer {
         z-index: 1000;
         padding-inline: 1rem;
     }
+    .title-logo img {
+        width: 10rem;
+    }
     .burger-icon {
         display: inline-block;
         position: absolute;
-        top: 29px;
+        top: 20px;
         right: 30px;
         font-size: 1.5rem;
         cursor: pointer;
@@ -640,7 +643,7 @@ footer {
         display: inline-block;
     }
     .logo-burger-img img {
-        width: 7rem;
+        width: 10rem;
     }
     .logo-burger-text {
         font-size: clamp(10px, 3vw, 19px);
