--- a/css/servicios_css.css
+++ b/css/servicios_css.css
@@ -385,7 +385,7 @@ footer {
         display: inline-block;
     }
     .logo-burger-img img {
-        width: 7rem;
+        width: 15rem;
     }
     .logo-burger-text {
         font-size: clamp(10px, 3vw, 19px);
@@ -497,7 +497,7 @@ footer {
         display: inline-block;
     }
     .logo-burger-img img {
-        width: 7rem;
+        width: 15rem;
     }
     .logo-burger-text {
         font-size: clamp(10px, 3vw, 19px);
@@ -600,10 +600,13 @@ footer {
         z-index: 1000;
         padding-inline: 1rem;
     }
+    .title-logo img {
+        width: 10rem;
+    }
     .burger-icon {
         display: inline-block;
         position: absolute;
-        top: 29px;
+        top: 20px;
         right: 30px;
         font-size: 1.5rem;
         cursor: pointer;
@@ -639,7 +642,7 @@ footer {
         display: inline-block;
     }
     .logo-burger-img img {
-        width: 7rem;
+        width: 10rem;
     }
     .logo-burger-text {
         font-size: clamp(10px, 3vw, 19px);
